curso de bonsais

--- a/FisicaModerna/Unidades/u1-fundamentos/practica-radiacion-cuerpo-negrov1.tex
+++ b/FisicaModerna/Unidades/u1-fundamentos/practica-radiacion-cuerpo-negrov1.tex
@@ -41,11 +41,11 @@
 % Definición de variables específicas de la práctica
 \newcommand{\practicenumber}{01}
 \newcommand{\practicetitle}{RADIACIÓN DE CUERPO NEGRO}
-\newcommand{\practiceunit}{Unidad I: Fundamentos de Teoría Cuántica}
+\newcommand{\practiceunit}{I: Fundamentos de Teoría Cuántica}
 \newcommand{\practicesubtopic}{Cuantización de la energía y Ley de Planck}
 \newcommand{\practiceduration}{45 minutos}
 \newcommand{\practicemodality}{Presencial asistida por tecnología}
-\newcommand{\practicedate}{Cuatrimestre Mayo-Agosto 2025}
+\newcommand{\practicedate}{Cuat May-Ago 2025}
 \newcommand{\practicesimulator}{PhET Blackbody Spectrum}
 
 % Configuración de headers y footers
@@ -199,7 +199,7 @@
 		
 		% Título principal
 		{\LARGE \textcolor{uteqblue}{\textbf{PRÁCTICA No. \practicenumber}}}\\[0.2cm]
-		{\Huge \textcolor{uteqblue}{\textbf{\practicetitle}}}\\[0.3cm]
+		{\LARGE \textcolor{uteqblue}{\textbf{\practicetitle}}}\\[0.3cm]
 		{\large \textcolor{uteqgray}{\textbf{Manual de Prácticas de Laboratorio}}}\\[0.2cm]
 		{\normalsize \textcolor{uteqgray}{Física Moderna | Ingeniería en Nanotecnología}}\\[0.5cm]
 	\end{center}
@@ -207,22 +207,17 @@
 	% ============================================================================
 	% DATOS GENERALES
 	% ============================================================================
+	\section*{DATOS GENERALES}
+	\begin{itemize}
+		\item \textbf{Número de Práctica:} \practicenumber
+		\item \textbf{Unidad Temática:} \practiceunit
+		\item \textbf{Tema:} \practicesubtopic
+		\item \textbf{Duración:} 45 minutos
+		\item \textbf{Modalidad:} Trabajo colaborativo en equipos de 3-4 estudiantes
+		\item \textbf{Materiales:} Computadora/tablet con acceso a internet, calculadora, hoja de trabajo impresa
+	\end{itemize}
+
 	
-	\begin{datosgeneralesbox}
-		\begin{multicols}{2}
-			\textbf{Número de Práctica:} \practicenumber\\
-			\textbf{Unidad Temática:} \practiceunit\\
-			\textbf{Tema/Subtema:} \practicesubtopic\\
-			\textbf{Duración:} \practiceduration\\
-			
-			\columnbreak
-			
-			\textbf{Modalidad:} \practicemodality\\
-			\textbf{Simulador Principal:} \practicesimulator\\
-			\textbf{Tipo de Actividad:} Trabajo colaborativo\\
-			\textbf{Tamaño de Equipo:} 3-4 estudiantes\\
-		\end{multicols}
-	\end{datosgeneralesbox}
 	
 	% ============================================================================
 	% SECCIÓN 1: OBJETIVOS DE APRENDIZAJE
