complementos en fisica moderna

--- a/FisicaModerna/Unidades/u1-fundamentos/practica-efecto-fotoelectrico.tex
+++ b/FisicaModerna/Unidades/u1-fundamentos/practica-efecto-fotoelectrico.tex
@@ -20,8 +20,8 @@
 \fancyhf{}
 \fancyhead[L]{Física Moderna - Ingeniería en Nanotecnología}
 \fancyhead[R]{Universidad Tecnológica de Querétaro}
-\fancyfoot[C]{\thepage}
-
+\fancyfoot[R]{\thepage}
+\fancyfoot[C]{\includegraphics[width=2cm]{../../Imagenes/Logo_uteq}}
 % Configuración de colores
 \definecolor{uteqblue}{RGB}{0,51,102}
 \definecolor{uteqgray}{RGB}{128,128,128}
@@ -52,9 +52,9 @@
 	
 	% Título principal
 	\begin{center}
-		{\Huge \textbf{ACTIVIDAD PRÁCTICA}}\\[0.3cm]
+		{\Huge \textbf{PRÁCTICA 2}}\\[0.3cm]
 		{\LARGE \textbf{EFECTO FOTOELÉCTRICO}}\\[0.2cm]
-		{\large Física Moderna | Ingeniería en Nanotecnología}\\[0.5cm]
+		{\large Física Moderna | Ingeniería en Nanotecnología}\\[1cm]
 		\includegraphics[width=5cm]{../../Imagenes/Logo_uteq}
 	\end{center}
 	
@@ -62,11 +62,14 @@
 	
 	% Datos generales
 	\section*{DATOS GENERALES}
+	\vspace{0.2cm}
 	\begin{itemize}
 		\item \textbf{Duración:} 45 minutos
 		\item \textbf{Modalidad:} Trabajo colaborativo en equipos de 3-4 estudiantes
 		\item \textbf{Materiales:} Computadora/tablet con acceso a internet, calculadora, hoja de trabajo impresa
 	\end{itemize}
+
+	\vspace{0.5cm}
 	
 	% Objetivos
 	\begin{objetivobox}
@@ -79,6 +82,7 @@
 		\end{itemize}
 	\end{objetivobox}
 	
+	\vspace{1cm}
 	\section*{INTRODUCCIÓN}
 	
 	El simulador PhET ``Efecto Fotoeléctrico'' permite explorar de manera virtual todas las características del efecto fotoeléctrico. En esta actividad, utilizaremos este simulador para verificar experimentalmente la ecuación de Einstein, determinar constantes físicas fundamentales y analizar el comportamiento de diferentes materiales.
