manuales de practicas y asignatura

--- a/FisicaModerna/Unidades/u1-fundamentos/ManualPracticas-FisicModerna.tex
+++ b/FisicaModerna/Unidades/u1-fundamentos/ManualPracticas-FisicModerna.tex
@@ -104,15 +104,13 @@
 			{\Huge \textcolor{uteqblue}{\textbf{DE LABORATORIO}}}\\[1cm]
 			
 			{\LARGE \textcolor{uteqgray}{\textbf{FÍSICA MODERNA}}}\\[0.3cm]
-			{\large \textcolor{uteqgray}{Fundamentos de Teoría Cuántica y Aplicaciones en Nanotecnología}}\\[2cm]
+			{\large \textcolor{uteqgray}{Fundamentos de Teoría Cuántica y Aplicaciones en Nanotecnología}}\\[4cm]
 			
 			% Información del curso
 			\begin{tcolorbox}[colback=uteqblue!10!white,colframe=uteqblue,width=12cm]
 				\begin{center}
 					\textbf{Información del Curso}\\[0.3cm]
 					\begin{tabular}{ll}
-						\textbf{Clave:} & FIS-902 \\
-						\textbf{Créditos:} & 5 \\
 						\textbf{Horas teóricas:} & 24 \\
 						\textbf{Horas prácticas:} & 36 \\
 						\textbf{Horas totales:} & 60 \\
@@ -125,9 +123,9 @@
 			\vfill
 			
 			% Información adicional
-			{\large \textcolor{uteqgray}{\textbf{Cuatrimestre Mayo - Agosto 2025}}}\\[0.5cm]
-			{\normalsize \textcolor{uteqgray}{Elaborado conforme a los lineamientos de la Nueva Escuela Mexicana}}\\
-			{\normalsize \textcolor{uteqgray}{y las recomendaciones de la UNESCO sobre educación técnica}}\\[1cm]
+		%	{\large \textcolor{uteqgray}{\textbf{Cuatrimestre Mayo - Agosto 2025}}}\\[0.5cm]
+		%	{\normalsize \textcolor{uteqgray}{Elaborado conforme a los lineamientos de la Nueva Escuela Mexicana}}\\
+		%	{\normalsize \textcolor{uteqgray}{y las recomendaciones de la UNESCO sobre educación técnica}}\\[1cm]
 			
 			% Logo institucional inferior
 	%		\includegraphics[width=2cm]{logo_sep.png}
@@ -139,7 +137,7 @@
 	
 	% Página de créditos
 	\thispagestyle{empty}
-	\vspace*{2cm}
+	\vspace*{1cm}
 	
 	\begin{center}
 		\textbf{\Large CRÉDITOS Y RECONOCIMIENTOS}
@@ -150,7 +148,7 @@
 	\textbf{Elaboración y Diseño Instruccional:}
 	\begin{itemize}[leftmargin=2cm]
 		\item Dr. Rubén Velázquez Hernández - Coordinador Académico de Física Moderna
-		\item  [Nombre del Colaborador] - 
+		%\item  [Nombre del Colaborador] - 
 		\item Ing. [Nombre del Colaborador] -
 	\end{itemize}
 	
@@ -180,7 +178,7 @@
 	\vspace{1cm}
 	
 	\begin{center}
-		\textbf{Primera Edición: Mayo 2025}\\
+		\textbf{Primera Edición: Mayo 2024}\\
 		\textbf{Universidad Tecnológica de Querétaro}\\
 	AV. Pie de la Cuesta 2501. Col. Unidad Nacional, Querétaro, Querétaro, México  \\
 		www.uteq.edu.mx
