ultima vwersion manual asignatura

--- a/FisicaModerna/Unidades/u1-fundamentos/ManualAsignatura-FisicaModerna-v0.tex
+++ b/FisicaModerna/Unidades/u1-fundamentos/ManualAsignatura-FisicaModerna-v0.tex
@@ -690,4 +690,12 @@
 \end{itemize}
 \end{evaluacionbox}
 
+\chapter{Unidad II: Modelo Nuclear del Átomo}
+
+\section{Información General de la Unidad}
+
+Unidad I: Teoría Básica del Electromagnetismo
+Unidad II: Modelo Nuclear del Átomo
+Unidad III: Dualidad Onda-Partícula
+Unidad IV: Solución de la Ecuación de Schrödinger
 \end{document}
