actualizacion de manuales de asignatura

--- a/FisicaModerna/Unidades/u1-fundamentos/ManualAsignatura-TransferenciaCalor -v0.tex
+++ b/FisicaModerna/Unidades/u1-fundamentos/ManualAsignatura-TransferenciaCalor -v0.tex
@@ -41,7 +41,7 @@
 \fancyhead[LE,RO]{\thepage}
 \fancyhead[LO]{\rightmark}
 \fancyhead[RE]{\leftmark}
-\fancyfoot[C]{\textcolor{uteqgray}{\textit{Manual del Estudiante - Física Moderna}}}
+\fancyfoot[C]{\textcolor{uteqgray}{\textit{Manual de Asignatura }}}
 
 % Para páginas de capítulo
 \fancypagestyle{plain}{
@@ -185,13 +185,13 @@
 			% Información institucional
 			{\large \textcolor{uteqblue}{\textbf{UNIVERSIDAD TECNOLÓGICA DE QUERÉTARO}}}\\[0.3cm]
 			
-			{\normalsize \textcolor{uteqgray}{Ingeniería en Nanotecnología}}\\[1cm]
+			{\normalsize \textcolor{uteqgray}{Ingeniería en Metal-Mecánica}}\\[1cm]
 			
 			% Título principal
 			{\Huge \textcolor{uteqblue}{\textbf{MANUAL DE ASIGNATURA}}}\\[1cm]
 			
-			{\LARGE \textcolor{uteqgray}{\textbf{FÍSICA MODERNA}}}\\[0.5cm]
-			{\large \textcolor{uteqgray}{Fundamentos Cuánticos para Nanotecnología}}\\[3cm]
+			{\LARGE \textcolor{uteqgray}{\textbf{TRANSFERENCIA DE CALOR}}}\\[0.5cm]
+			{\large \textcolor{uteqgray}{}}\\[3cm]
 			
 			% Información del curso
 			\begin{tcolorbox}[colback=uteqblue!10!white,colframe=uteqblue,width=14cm]
@@ -214,16 +214,14 @@
 			\begin{tcolorbox}[colback=uteqgreen!10!white,colframe=uteqgreen,width=14cm]
 				\begin{center}
 					\textbf{Competencia Principal}\\[0.3cm]
-					\small{Diseñar procesos de producción de materiales nanoestructurados en laboratorio y a nivel industrial, con 
-						base en la planeación, técnicas de síntesis e incorporación y normatividad aplicable, para su 
-						comercialización y contribuir a la innovación tecnológica	sus características y propiedades tecnológicas}
+					\small{}
 				\end{center}
 			\end{tcolorbox}
 			
 			\vfill
 			
 			% Información adicional
-			{\normalsize \textcolor{uteqgray}{\textbf{Cuatrimestre Mayo - Agosto 2025}}}\\[0.5cm]
+			{\normalsize \textcolor{uteqgray}{\textbf{Cuatrimestre Mayo - Agosto 2024}}}\\[0.5cm]
 			{\small \textcolor{uteqgray}{Elaborado conforme al modelo educativo basado en competencias}}\\[1cm]
 			
 			% Logo institucional inferior
@@ -294,313 +292,6 @@
 	
 	% Tabla de contenidos
 	\tableofcontents
-	% ÍNDICE TEMÁTICO DETALLADO - FÍSICA MODERNA
-	% Para incluir en el manual después de la tabla de contenidos
-	
-	\chapter*{ÍNDICE TEMÁTICO POR UNIDADES}
-	\addcontentsline{toc}{chapter}{Índice Temático por Unidades}
-	
-	\begin{center}
-		\Large{\textbf{CONTENIDOS DE APRENDIZAJE}}\\
-		\large{\textit{Conocimientos y Habilidades por Unidad Temática}}
-	\end{center}
-	
-	\vspace{1cm}
-	
-	\newpage
-	
-	% UNIDAD I
-	\section*{\textcolor{uteqblue}{\large UNIDAD I: TEORÍA BÁSICA DEL ELECTROMAGNETISMO}}
-	\textit{Duración: 3 semanas (14 horas: 6 teóricas + 8 prácticas)}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 1.1: Campos Eléctricos y Magnéticos}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Naturaleza de los campos electromagnéticos como perturbaciones del espacio
-		\item Magnitudes electromagnéticas fundamentales:% E, B, μ, ε y su significado físico
-		\item Propiedades electromagnéticas específicas de nanomateriales
-		\item Mecanismos de interacción campos-materia a escala nanométrica
-		\item Fenómenos de polarización y magnetización en nanoestructuras
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular campos electromagnéticos en configuraciones geométricas específicas
-		\item Determinar la respuesta electromagnética de materiales nanoestructurados
-		\item Analizar la propagación de ondas EM en diferentes medios
-		\item Relacionar propiedades microscópicas con comportamiento macroscópico
-		\item Interpretar mediciones experimentales de propiedades electromagnéticas
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 1.2: Ecuaciones de Maxwell}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Formulación integral de las cuatro ecuaciones de Maxwell
-		\item Significado físico: Ley de Gauss, Ampère-Maxwell, Faraday, ausencia de monopolos
-		\item Derivación de la ecuación de onda electromagnética
-		\item Propiedades fundamentales: velocidad, frecuencia, longitud de onda, energía
-		\item Relación entre campos eléctricos y magnéticos en ondas propagantes
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Aplicar ecuaciones de Maxwell para resolver problemas de propagación
-		\item Calcular velocidad de ondas EM en medios materiales específicos
-		\item Determinar parámetros electromagnéticos%(ε, μ) de materiales
-		\item Analizar polarización de ondas electromagnéticas
-		\item Modelar comportamiento EM en nanoestructuras
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 1.3: Ecuación de Onda y Polarización}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Ecuación de onda electromagnética: derivación y soluciones generales
-		\item Estados de polarización: lineal, circular, elíptica
-		\item Interacción luz-materia: absorción, dispersión, refracción
-		\item Efectos ópticos en nanoestructuras: plasmones, efectos de tamaño
-		\item Aplicaciones en caracterización óptica de nanomateriales
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Resolver la ecuación de onda para configuraciones específicas
-		\item Analizar experimentalmente la polarización de la luz
-		\item Caracterizar propiedades ópticas de nanomateriales
-		\item Diseñar experimentos de caracterización electromagnética
-		\item Interpretar espectros ópticos de materiales nanoestructurados
-	\end{itemize}
-	
-	\vspace{1cm}
-	
-	% UNIDAD II
-	\section*{\textcolor{uteqblue}{\large UNIDAD II: MODELO NUCLEAR DEL ÁTOMO}}
-	\textit{Duración: 3 semanas (16 horas: 6 teóricas + 10 prácticas)}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 2.1: El Descubrimiento del Núcleo Atómico}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Modelo de Thomson (1904): "Pudín de pasas" - limitaciones y evidencia contradictoria
-		\item Modelo de Rutherford (1911): Núcleo denso y pequeño - revolución conceptual
-		\item Modelo de Bohr (1913): Órbitas cuantizadas - primer éxito cuántico
-		\item Estructura nuclear moderna: protones, neutrones, fuerzas nucleares
-		\item Isótopos y aplicaciones: datación, medicina nuclear, energía
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Construir líneas de tiempo de descubrimientos atómicos
-		\item Calcular parámetros nucleares (radio, densidad, energía de enlace)
-		\item Evaluar la estabilidad nuclear usando modelos semiempíricos
-		\item Relacionar estructura atómica con propiedades macroscópicas
-		\item Predecir comportamiento de isótopos artificiales
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 2.2: Experimento de Rutherford}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		%\item Diseño experimental: fuente α, lámina de oro, detector de centelleo
-		\item Resultados inesperados: dispersión a grandes ángulos (> 90°)
-		\item Interpretación cuantitativa: Ley de Coulomb, sección eficaz diferencial
-		\item Cálculos de dispersión: fórmula de Rutherford, probabilidades
-		\item Determinación del tamaño nuclear: métodos experimentales
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Analizar datos históricos de dispersión de partículas
-		\item Calcular secciones eficaces para diferentes ángulos
-		\item Determinar radios nucleares a partir de datos experimentales
-		\item Simular el experimento usando métodos Monte Carlo
-		\item Extrapolar resultados a núcleos modernos
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 2.3: Modelo de Bohr e Interacción Radiación-Materia}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Postulados de Bohr: estados estacionarios, cuantización de L, reglas de transición
-		\item Cálculos exactos: $E_n = -13.6/n^2$ eV, $r_n = 0.529 n^2$ Å
-		\item Series espectrales: Lyman (UV), Balmer (visible), Paschen (IR)
-		\item Interacción radiación-materia: absorción, emisión, coeficientes de Einstein
-		\item Limitaciones: átomos multielectrónicos, estructura fina, spin
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular longitudes de onda de todas las series espectrales
-		\item Determinar energías de ionización experimentalmente
-		\item Interpretar espectros de absorción y emisión
-		\item Identificar elementos por análisis espectral
-		\item Caracterizar nanomateriales usando espectroscopía óptica
-	\end{itemize}
-	
-	\vspace{1cm}
-	
-	% UNIDAD III
-	\section*{\textcolor{uteqblue}{\large UNIDAD III: DUALIDAD ONDA-PARTÍCULA}}
-	\textit{Duración: 3 semanas (12 horas: 4 teóricas + 8 prácticas)}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 3.1: Postulado de Planck y Radiación de Cuerpo Negro}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Catástrofe ultravioleta: falla de la física clásica en altas frecuencias
-		\item Hipótesis revolucionaria: $E = nhf$ - energía viene en "paquetes"
-		\item Constante de Planck: $h = 6.626 \times 10^{-34}$ J·s - nueva constante fundamental
-		\item Ley de Planck: $B(\lambda,T) = \frac{2hc^2}{\lambda^5} \frac{1}{e^{hc/\lambda kT}-1}$
-		\item Aplicaciones modernas: LEDs, láseres, termografía infrarroja
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular la energía emitida por cuerpos negros a diferentes temperaturas
-		\item Determinar longitudes de onda de máxima emisión usando ley de Wien
-		\item Aplicar ley de Stefan-Boltzmann para cálculos de potencia radiada
-		\item Analizar espectros de emisión térmica de materiales
-		\item Caracterizar nanomateriales mediante termografía infrarroja
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 3.2: Efecto Fotoeléctrico}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Observaciones experimentales: dependencia con frecuencia, no con intensidad
-		\item Explicación de Einstein (1905): concepto de fotón, $E = hf$
-		\item Ecuación fundamental: $E_k = hf - \phi$ (función trabajo)
-		\item Características únicas: umbral de frecuencia, emisión instantánea
-		\item Aplicaciones tecnológicas: celdas solares, fotodiodos, sensores de imagen
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular energía cinética de fotoelectrones para diferentes frecuencias
-		\item Determinar funciones trabajo de materiales experimentalmente
-		\item Analizar curvas características corriente vs. voltaje y frecuencia
-		\item Diseñar experimentos de caracterización fotoeléctrica
-		\item Evaluar eficiencia cuántica de dispositivos fotosensibles
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 3.3: Hipótesis de De Broglie}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Dualidad universal: si luz puede ser partícula, materia puede ser onda
-		\item Longitud de onda de De Broglie: $\lambda = \frac{h}{p} = \frac{h}{mv}$
-		\item Evidencia experimental: Davisson-Germer (1927) - difracción de electrones
-		\item Microscopía electrónica: fundamentos cuánticos del TEM y SEM
-		\item Implicaciones: límites fundamentales en medición y tecnología
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular longitudes de onda de De Broglie para partículas en movimiento
-		\item Comparar escalas de longitudes de onda con dimensiones atómicas
-		\item Predecir fenómenos de difracción para diferentes partículas
-		\item Interpretar patrones de difracción electrónica en cristales
-		\item Estimar resoluciones límite en microscopía electrónica
-	\end{itemize}
-	
-	\vspace{1cm}
-	
-	% UNIDAD IV
-	\section*{\textcolor{uteqblue}{\large UNIDAD IV: SOLUCIÓN DE LA ECUACIÓN DE SCHRÖDINGER}}
-	\textit{Duración: 4 semanas (20 horas: 8 teóricas + 12 prácticas)}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 4.1: Función de Onda y Ecuación de Schrödinger}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Función de onda $\psi(x,t)$: descripción completa del estado cuántico
-		\item Interpretación de Born: $|\psi|^2$ como densidad de probabilidad
-		\item Ecuación dependiente del tiempo: $i\hbar \frac{\partial \psi}{\partial t} = \hat{H}\psi$
-		\item Ecuación independiente del tiempo: $\hat{H}\psi = E\psi$ (problema de eigenvalores)
-		\item Operador hamiltoniano: $\hat{H} = \hat{T} + \hat{V} = -\frac{\hbar^2}{2m}\nabla^2 + V(\mathbf{r})$
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Interpretar físicamente funciones de onda complejas
-		\item Calcular probabilidades de medición en diferentes regiones
-		\item Aplicar condiciones de frontera apropiadas
-		\item Normalizar funciones de onda usando integración
-		\item Visualizar densidades de probabilidad en 3D
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 4.2: Partícula en una Caja (Pozo Infinito)}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Modelo del pozo infinito: $V = 0$ para $0 < x < L$, $V = \infty$ fuera
-		\item Solución exacta: $\psi_n(x) = \sqrt{\frac{2}{L}} \sin\left(\frac{n\pi x}{L}\right)$
-		\item Energías cuantizadas: $E_n = \frac{n^2\pi^2\hbar^2}{2mL^2}$
-		\item Energía de punto cero: $E_1 \neq 0$ (principio de incertidumbre)
-		\item Aplicaciones reales: quantum dots, nanohilos, pozos cuánticos
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Resolver analíticamente la ecuación de Schrödinger para el pozo infinito
-		\item Calcular energías de transición entre niveles cuantizados
-		\item Determinar probabilidades de localización en diferentes regiones
-		\item Graficar funciones de onda y densidades de probabilidad
-		\item Aplicar el modelo a sistemas reales como quantum dots
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 4.3: Efecto Túnel y Barreras de Potencial}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Barreras de potencial: $V = V_0$ para $0 < x < a$, $V = 0$ fuera
-		\item Soluciones en cada región: ondas propagantes y evanescentes
-		\item Coeficientes de reflexión y transmisión: $R + T = 1$
-		\item Dependencia exponencial: $T \propto e^{-2\kappa a}$ donde $\kappa = \sqrt{2m(V_0-E)}/\hbar$
-		\item Aplicaciones tecnológicas: STM, RTD, memorias flash, microscopía túnel
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Calcular coeficientes de transmisión para diferentes energías y geometrías
-		\item Analizar dependencia del túnel con altura y ancho de barrera
-		\item Predecir comportamiento de dispositivos basados en efecto túnel
-		\item Interpretar curvas I-V de dispositivos túnel
-		\item Diseñar barreras túnel para aplicaciones específicas
-	\end{itemize}
-	
-	\subsection*{\textcolor{uteqgreen}{Tema 4.4: Potenciales Periódicos y Teoría de Bandas}}
-	
-	\subsubsection*{\faBook\ SABER - Conocimientos}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Modelo de Kronig-Penney: cristal unidimensional con potencial periódico
-		\item Teorema de Bloch: $\psi_k(x) = u_k(x)e^{ikx}$, funciones de Bloch
-		\item Estructura de bandas: bandas permitidas y prohibidas (gaps)
-		\item Banda de valencia: estados ocupados a T = 0
-		\item Banda de conducción: estados desocupados disponibles para conducción
-		\item Brecha de energía (bandgap): energía entre banda de valencia y conducción
-		\item Clasificación de materiales: conductores, semiconductores, aislantes
-		\item Efectos de tamaño: confinamiento cuántico en nanoestructuras
-	\end{itemize}
-	
-	\subsubsection*{\faTools\ SABER HACER - Habilidades}
-	\begin{itemize}[leftmargin=1.5cm]
-		\item Interpretar diagramas de bandas para diferentes materiales
-		\item Calcular densidades de estados en bandas de energía
-		\item Predecir propiedades eléctricas a partir de estructura de bandas
-		\item Analizar efectos de dopado en semiconductores
-		\item Aplicar teoría de bandas a nanomateriales y superestructuras
-	\end{itemize}
-	
-	\vspace{2cm}
-	
-	\begin{center}
-		\textcolor{uteqgray}{\rule{0.8\textwidth}{0.5pt}}\\
-		\textit{Este índice temático te servirá como guía de estudio y referencia rápida\\
-			para identificar los conocimientos y habilidades específicos de cada tema}
-	\end{center}
 	
 	\listoftables
 	
